# gst-droid

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  gst-droid.doap  gstreamer-droid-1.0.pc.in  meson.build
data/: Makefile.am  divxdecode.conf  gstdroidcamsrc.conf  gstdroidcamsrcquirks.conf  h263decode.conf  h264decode.conf  h264encode.conf  mpeg4videodecode.conf  mpeg4videoencode.conf
gst/: Makefile.am  meson.build  plugin.c  plugin.h
gst-libs/gst/: Makefile.am  meson.build
gst-libs/gst/droid/: Makefile.am  gstdroidbufferpool.c  gstdroidbufferpool.h  gstdroidcodec.c  gstdroidcodec.h  gstdroidfpsdumper.c  gstdroidfpsdumper.h  gstdroidmediabuffer.c  gstdroidmediabuffer.h  gstdroidquery.c  gstdroidquery.h  gstwrappedmemory.c  gstwrappedmemory.h  meson.build
gst-libs/gst/memory/: Makefile.am  gstdroidmediabuffer.c  gstdroidmediabuffer.h  gstgralloc.c  gstgralloc.h  gstwrappedmemory.c  gstwrappedmemory.h
gst-libs/gst/utils/: Makefile.am
gst/droidcamsrc/: Makefile.am  gstdroidcamsrc.c  gstdroidcamsrc.h  gstdroidcamsrcbufferpool.c  gstdroidcamsrcbufferpool.h  gstdroidcamsrcdev.c  gstdroidcamsrcdev.h  gstdroidcamsrcdevmemory.c  gstdroidcamsrcdevmemory.h  gstdroidcamsrcenums.c  gstdroidcamsrcenums.h  gstdroidcamsrcexif.c  gstdroidcamsrcexif.h  gstdroidcamsrcmode.c  gstdroidcamsrcmode.h  gstdroidcamsrcparams.c  gstdroidcamsrcparams.h  gstdroidcamsrcphotography.c  gstdroidcamsrcphotography.h  gstdroidcamsrcquirks.c  gstdroidcamsrcquirks.h  gstdroidcamsrcrecorder.c  gstdroidcamsrcrecorder.h  gstdroidcamsrcstreamwindow.c  gstdroidcamsrcstreamwindow.h  meson.build  plugin.c  plugin.h
gst/droidcodec/: Makefile.am  gstdroidadec.c  gstdroidadec.h  gstdroidaenc.c  gstdroidaenc.h  gstdroidcodec.c  gstdroidcodec.h  gstdroidcodecallocatorgralloc.c  gstdroidcodecallocatorgralloc.h  gstdroidcodecallocatoromx.c  gstdroidcodecallocatoromx.h  gstdroidcodectype.c  gstdroidcodectype.h  gstdroiddec.c  gstdroiddec.h  gstdroiddecbufferpool.c  gstdroiddecbufferpool.h  gstdroidenc.c  gstdroidenc.h  gstdroidvdec.c  gstdroidvdec.h  gstdroidvenc.c  gstdroidvenc.h  gstencoderparams.c  gstencoderparams.h  mappings.c  meson.build  plugin.c  plugin.h
gst/droideglsink/: Makefile.am  gstdroideglsink.c  gstdroideglsink.h  gstdroidvideotexturesink.c  gstdroidvideotexturesink.h  meson.build
inc/: gstdroidmacros.h
inc/android/: HardwareAPI.h
inc/hybris/: binding.h
rpm/: gst-droid.spec
tests/: Makefile.am  allocator.c
tools/: Makefile.am  common.c  common.h  gstdroidcamparams.c  gstdroidcamsrcconf.c  main.cpp  main.qml  meson.build  qml.qrc  record.c  renderernemo.cpp  resolutions.c  tools.pro  videoplayer.cpp  videoplayer.h
tools/misc/: camerabin.c
tools/mk-cam-conf/: Makefile.am  gstdroidcamsrcconf.c
tools/player/: Button.qml  main.qml  player.pro  renderer.cpp  renderer.h  videoplayer.cpp  videoplayer.h
tools/simple-camera/: image.gep  main.cpp  main.qml  renderernemo.cpp  renderernemo.h  simple-camera.pro  video.gep  videoplayer.cpp  videoplayer.h
