noinst_LTLIBRARIES = libgstutils.la

libgstutils_la_includedir = \
	$(includedir)/gstreamer-@GST_API_VERSION@/gst/droid

libgstutils_la_CFLAGS = \
	$(GST_CFLAGS)

libgstutils_la_LIBADD = \
	$(GST_LIBS)

libgstutils_la_SOURCES = \
	gstdroidbufferpool.c

libgstutils_la_include_HEADERS = \
	gstdroidbufferpool.h
